Change list creation to be JDK 8 compatible