@@ -1,13 +1,14 @@
 package com.checkmarx.demo.service.discovery.http.p.config;
 
 import com.checkmarx.demo.service.discovery.http.p.properites.RelatedServicesProperties;
-import com.sun.tools.javac.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
 import org.springframework.web.cors.CorsConfiguration;
+
+import java.util.Collections;
 
 /**
  * @author Yevgeny Kuznetsov
@@ -28,9 +29,9 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
     protected void configure(HttpSecurity http) throws Exception {
         http.antMatcher("/check-loan-credibility").cors().configurationSource(request -> {
             CorsConfiguration config = new CorsConfiguration();
-            config.setAllowedOrigins(List.of(relatedServicesProperties.getBankGatewayUrl()));
-            config.setAllowedMethods(List.of("GET"));
-            config.setAllowedHeaders(List.of("*"));
+            config.setAllowedOrigins(Collections.singletonList(relatedServicesProperties.getBankGatewayUrl()));
+            config.setAllowedMethods(Collections.singletonList("GET"));
+            config.setAllowedHeaders(Collections.singletonList("*"));
             return config;
         }).and().authorizeRequests().antMatchers("**").permitAll();
     }
